// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: transform component slots dynamically named slots 1`] = `
"const { toDisplayString, resolveComponent, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, {
    [_ctx.one]: ({ foo }) => [toDisplayString(foo), toDisplayString(_ctx.bar)],
    [_ctx.two]: ({ bar }) => [toDisplayString(_ctx.foo), toDisplayString(bar)],
    _compiled: true
  }, 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots implicit default slot 1`] = `
"const { createVNode, resolveComponent, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, {
    default: () => [
      createVNode(\\"div\\")
    ],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots named slot with v-for w/ prefixIdentifiers: true 1`] = `
"const { toDisplayString, resolveComponent, renderList, createSlots, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, createSlots({ _compiled: true }, [
    renderList(_ctx.list, (name) => {
      return {
        name: name,
        fn: () => [toDisplayString(name)]
      }
    })
  ]), 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots named slot with v-if + prefixIdentifiers: true 1`] = `
"const { toDisplayString, resolveComponent, createSlots, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, createSlots({ _compiled: true }, [
    (_ctx.ok)
      ? {
          name: \\"one\\",
          fn: (props) => [toDisplayString(props)]
        }
      : undefined
  ]), 512 /* DYNAMIC_SLOTS */))
}"
`;

exports[`compiler: transform component slots named slot with v-if + v-else-if + v-else 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { resolveComponent: _resolveComponent, createSlots: _createSlots, createVNode: _createVNode, createBlock: _createBlock, openBlock: _openBlock } = _Vue
    
    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
      ok
        ? {
            name: \\"one\\",
            fn: () => [\\"foo\\"]
          }
        : orNot
          ? {
              name: \\"two\\",
              fn: (props) => [\\"bar\\"]
            }
          : {
              name: \\"one\\",
              fn: () => [\\"baz\\"]
            }
    ]), 512 /* DYNAMIC_SLOTS */))
  }
}"
`;

exports[`compiler: transform component slots named slot with v-if 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { resolveComponent: _resolveComponent, createSlots: _createSlots, createVNode: _createVNode, createBlock: _createBlock, openBlock: _openBlock } = _Vue
    
    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, _createSlots({ _compiled: true }, [
      ok
        ? {
            name: \\"one\\",
            fn: () => [\\"hello\\"]
          }
        : undefined
    ]), 512 /* DYNAMIC_SLOTS */))
  }
}"
`;

exports[`compiler: transform component slots named slots 1`] = `
"const { toDisplayString, resolveComponent, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, {
    one: ({ foo }) => [toDisplayString(foo), toDisplayString(_ctx.bar)],
    two: ({ bar }) => [toDisplayString(_ctx.foo), toDisplayString(bar)],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots named slots w/ implicit default slot 1`] = `
"const _Vue = Vue

return function render() {
  with (this) {
    const { createVNode: _createVNode, resolveComponent: _resolveComponent, createBlock: _createBlock, openBlock: _openBlock } = _Vue
    
    const _component_Comp = _resolveComponent(\\"Comp\\")

    return (_openBlock(), _createBlock(_component_Comp, null, {
      one: () => [\\"foo\\"],
      default: () => [
        \\"bar\\",
        _createVNode(\\"span\\")
      ],
      _compiled: true
    }))
  }
}"
`;

exports[`compiler: transform component slots nested slots scoping 1`] = `
"const { toDisplayString, resolveComponent, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Inner = resolveComponent(\\"Inner\\")
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, {
    default: ({ foo }) => [
      createVNode(_component_Inner, null, {
        default: ({ bar }) => [toDisplayString(foo), toDisplayString(bar), toDisplayString(_ctx.baz)],
        _compiled: true
      }, 512 /* DYNAMIC_SLOTS */),
      \\" \\",
      toDisplayString(foo),
      toDisplayString(_ctx.bar),
      toDisplayString(_ctx.baz)
    ],
    _compiled: true
  }))
}"
`;

exports[`compiler: transform component slots on-component default slot 1`] = `
"const { toDisplayString, resolveComponent, createVNode, createBlock, openBlock } = Vue

return function render() {
  const _ctx = this
  const _component_Comp = resolveComponent(\\"Comp\\")

  return (openBlock(), createBlock(_component_Comp, null, {
    default: ({ foo }) => [toDisplayString(foo), toDisplayString(_ctx.bar)],
    _compiled: true
  }))
}"
`;
